test/chainsaw/authpolicy/auto_login_overlapping_rules/authpolicy.yaml
apiVersion: ztoperator.kartverket.no/v1alpha1
kind: AuthPolicy
metadata:
  name: auth-policy
spec:
  enabled: true
  ignoreAuthRules:
    - paths:
        - /secure/specific/path1*
        - /secure/specific/path2*
      methods:
        - GET
  authRules:
    - paths:
        - /*
      methods:
        - POST
        - PUT
        - DELETE
      when:
        - claim: role
          values:
            - entra_user_role
    - paths:
        - /
        - /secure
        - /secure1
        - /secure2
        - /other/path
        - /other/path1
      methods:
        - GET
      when:
        - claim: role
          values:
            - entra_user_role
  oAuthCredentials:
    clientIDKey: CLIENT_ID
    clientSecretKey: CLIENT_SECRET
    secretRef: oauth-secret
  autoLogin:
    enabled: true
    loginPath: /login
    logoutPath: /logout
    redirectPath: /oauth2/callback
    scopes:
      - openid
  allowedAudiences:
    - value: entraid_server
  wellKnownURI: http://mock-oauth2.auth:8080/entraid/.well-known/openid-configuration
  selector:
    matchLabels:
      app: application
